--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+fastapi = "*"
+uvicorn = {extras = ["standard"], version = "*"}
+sentry-sdk = {extras = ["fastapi"], version = "*"}
 
 [dev-packages]
 
